# ocpp-client

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yaml
examples/: connect.rs
src/: client.rs  connect.rs  lib.rs  ocpp_1_6_client.rs  ocpp_1_6_error.rs  raw_ocpp_1_6_call.rs  raw_ocpp_1_6_result.rs
src/ocpp_1_6/: mod.rs  ocpp_1_6_client.rs  ocpp_1_6_error.rs  raw_ocpp_1_6_error.rs
src/ocpp_2_0_1/: mod.rs  ocpp_2_0_1_client.rs  ocpp_2_0_1_error.rs  raw_ocpp_2_0_1_call.rs  raw_ocpp_2_0_1_error.rs  raw_ocpp_2_0_1_result.rs
