[package]
edition = '2021'
name = "ocpp-client"
version = "0.1.2"
description = "OCPP Client Implementation. Use this library to implement an OCPP charge point"
repository = "https://github.com/flowionab/ocpp-client"
license = "MIT OR Apache-2.0"
authors = ["Joatin Granlund <joatin@granlund.io>"]
keywords = ["OCPP", "ChargePoint", "Client", "ocpp16", "ocpp201"]

[dependencies]
rust-ocpp = { version = "1.0", features = ["v2_0_1", "v1_6"] }
tokio = { version = "1", features = ["sync", "rt"] }
futures = "0.3"
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
url = "2.5"
rustls = "0.23"
serde = "1.0"
serde_json = "1.0.120"
uuid = { version = "1.10.0", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

