[package]
edition = '2021'
name = "ocpp-client"
version = "0.1.14"
description = "OCPP Client Implementation. Use this library to implement an OCPP charge point"
repository = "https://github.com/flowionab/ocpp-client"
license = "MIT OR Apache-2.0"
authors = ["Joatin Granlund <joatin@granlund.io>"]
keywords = ["OCPP", "ChargePoint", "Client", "ocpp16", "ocpp201"]

[features]
default = ["ocpp_1_6", "ocpp_2_0_1"]
ocpp_1_6 = ["rust-ocpp/v1_6"]
ocpp_2_0_1 = ["rust-ocpp/v2_0_1"]
test = []

[dependencies]
rust-ocpp = { version = "2.0", default-features = false }
tokio = { version = "1", features = ["sync", "rt", "time"] }
futures = "0.3"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
url = "2.5"
rustls = "0.23"
serde = "1.0"
serde_json = "1.0.120"
uuid = { version = "1.10.0", features = ["v4"] }
base64 = "0.22"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

